--- a/Majorizor/Web.config
+++ b/Majorizor/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 
 <!--
   For more information on how to configure your ASP.NET application, please visit
@@ -9,5 +9,13 @@
     <system.web>
       <compilation debug="true" targetFramework="4.0" />
     </system.web>
+  <connectionStrings>
+    <add name="MajorizorConnectionString" connectionString="server=sql.clarkson.edu; uid=majorizor_user;pwd=user2017majorizor;database=majorizor;" />
+  </connectionStrings>
 
-</configuration>
+<system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data></configuration>
