--- a/Majorizor/packages.config
+++ b/Majorizor/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="bootstrap" version="3.3.7" targetFramework="net40" />
   <package id="jQuery" version="3.1.1" targetFramework="net40" />
+  <package id="MySql.Data" version="6.9.9" targetFramework="net40" />
 </packages>
