ID and naming changes

--- a/Majorizor/Majorizor.csproj
+++ b/Majorizor/Majorizor.csproj
@@ -86,9 +86,9 @@
     <Content Include="Scripts\jquery-3.1.1.min.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.js" />
-    <Content Include="UserGroups\Admins\AdminLanding.aspx" />
-    <Content Include="UserGroups\Advisors\AdvisorLanding.aspx" />
-    <Content Include="UserGroups\Students\StudentLanding.aspx" />
+    <Content Include="Screens\Admins\AdminLanding.aspx" />
+    <Content Include="Screens\Advisors\AdvisorLanding.aspx" />
+    <Content Include="Screens\Students\StudentLanding.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -119,25 +119,25 @@
     <Compile Include="Resources\DataAccess\AccountControls.cs" />
     <Compile Include="Resources\Security\Security.cs" />
     <Compile Include="Resources\UserGroup.cs" />
-    <Compile Include="UserGroups\Admins\AdminLanding.aspx.cs">
+    <Compile Include="Screens\Admins\AdminLanding.aspx.cs">
       <DependentUpon>AdminLanding.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="UserGroups\Admins\AdminLanding.aspx.designer.cs">
+    <Compile Include="Screens\Admins\AdminLanding.aspx.designer.cs">
       <DependentUpon>AdminLanding.aspx</DependentUpon>
     </Compile>
-    <Compile Include="UserGroups\Advisors\AdvisorLanding.aspx.cs">
+    <Compile Include="Screens\Advisors\AdvisorLanding.aspx.cs">
       <DependentUpon>AdvisorLanding.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="UserGroups\Advisors\AdvisorLanding.aspx.designer.cs">
+    <Compile Include="Screens\Advisors\AdvisorLanding.aspx.designer.cs">
       <DependentUpon>AdvisorLanding.aspx</DependentUpon>
     </Compile>
-    <Compile Include="UserGroups\Students\StudentLanding.aspx.cs">
+    <Compile Include="Screens\Students\StudentLanding.aspx.cs">
       <DependentUpon>StudentLanding.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="UserGroups\Students\StudentLanding.aspx.designer.cs">
+    <Compile Include="Screens\Students\StudentLanding.aspx.designer.cs">
       <DependentUpon>StudentLanding.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
