Student and StudentInformation Classes
Student Class - Student object to hold infromation about students
StudentInformation Class - DataAccess layer code for Student class

These classes will be used to complete the Advisor Landing page.

--- a/Majorizor/Majorizor.csproj
+++ b/Majorizor/Majorizor.csproj
@@ -113,7 +113,9 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\DataAccess\AccountControls.cs" />
+    <Compile Include="Resources\DataAccess\StudentInformation.cs" />
     <Compile Include="Resources\Security\Security.cs" />
+    <Compile Include="Resources\Student.cs" />
     <Compile Include="Resources\UserGroup.cs" />
     <Compile Include="Screens\Admins\AdminLanding.aspx.cs">
       <DependentUpon>AdminLanding.aspx</DependentUpon>
