--- a/Majorizor/Majorizor.csproj
+++ b/Majorizor/Majorizor.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Resources\DataAccess\StudentInformation.cs" />
     <Compile Include="Resources\Security\Security.cs" />
     <Compile Include="Resources\Student.cs" />
+    <Compile Include="Resources\Time.cs" />
     <Compile Include="Resources\UserGroup.cs" />
     <Compile Include="Screens\Admins\AdminLanding.aspx.cs">
       <DependentUpon>AdminLanding.aspx</DependentUpon>
