--- a/Majorizor/Majorizor.csproj
+++ b/Majorizor/Majorizor.csproj
@@ -114,9 +114,11 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Advisor.cs" />
+    <Compile Include="Resources\Course.cs" />
     <Compile Include="Resources\DataAccess\AccountControls.cs" />
     <Compile Include="Resources\DataAccess\AdvisorInformation.cs" />
     <Compile Include="Resources\DataAccess\StudentInformation.cs" />
+    <Compile Include="Resources\MasterScheduleparser.cs" />
     <Compile Include="Resources\Security\Security.cs" />
     <Compile Include="Resources\Student.cs" />
     <Compile Include="Resources\Time.cs" />
