User and User Information Class
Also contains changes for AdminLanding, although these are unfinished - they will still compile and run.

--- a/Majorizor/Majorizor.csproj
+++ b/Majorizor/Majorizor.csproj
@@ -119,10 +119,12 @@
     <Compile Include="Resources\DataAccess\AdvisorInformation.cs" />
     <Compile Include="Resources\DataAccess\ScheduleImport.cs" />
     <Compile Include="Resources\DataAccess\StudentInformation.cs" />
+    <Compile Include="Resources\DataAccess\UserInformation.cs" />
     <Compile Include="Resources\MasterScheduleParser.cs" />
     <Compile Include="Resources\Security\Security.cs" />
     <Compile Include="Resources\Student.cs" />
     <Compile Include="Resources\UserGroup.cs" />
+    <Compile Include="Resources\User.cs" />
     <Compile Include="Screens\Admins\AdminLanding.aspx.cs">
       <DependentUpon>AdminLanding.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
