--- a/Majorizor/Majorizor.csproj
+++ b/Majorizor/Majorizor.csproj
@@ -80,7 +80,6 @@
     <Content Include="Screens\Students\SetStudentInformation.aspx" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Majorizor.Master" />
-    <Content Include="ClassDiagram1.cd" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\dataTables.bootstrap.min.js" />
     <Content Include="Scripts\fileinput.min.js" />
@@ -122,6 +121,7 @@
     <Compile Include="Resources\DataAccess\AdvisorInformation.cs" />
     <Compile Include="Resources\DataAccess\ScheduleImport.cs" />
     <Compile Include="Resources\DataAccess\StudentInformation.cs" />
+    <Compile Include="Resources\DataAccess\StudentPageRepository.cs" />
     <Compile Include="Resources\DataAccess\UserInformation.cs" />
     <Compile Include="Resources\MasterScheduleLoader.cs" />
     <Compile Include="Resources\Security\Security.cs" />
