Major classes - Potentially broken

--- a/Majorizor/Majorizor.csproj
+++ b/Majorizor/Majorizor.csproj
@@ -119,11 +119,20 @@
     <Compile Include="Resources\Course.cs" />
     <Compile Include="Resources\DataAccess\AccountController.cs" />
     <Compile Include="Resources\DataAccess\AdvisorInformation.cs" />
+    <Compile Include="Resources\DataAccess\MajorInformation.cs" />
+    <Compile Include="Resources\DataAccess\ProgressInformation.cs" />
     <Compile Include="Resources\DataAccess\ScheduleImport.cs" />
     <Compile Include="Resources\DataAccess\StudentInformation.cs" />
     <Compile Include="Resources\DataAccess\StudentPageRepository.cs" />
     <Compile Include="Resources\DataAccess\UserInformation.cs" />
+    <Compile Include="Resources\Majors\CE_Major.cs" />
+    <Compile Include="Resources\Majors\CS_Major.cs" />
+    <Compile Include="Resources\Majors\EE_Major.cs" />
+    <Compile Include="Resources\Majors\Major.cs" />
+    <Compile Include="Resources\Majors\MA_Major.cs" />
+    <Compile Include="Resources\Majors\SE_Major.cs" />
     <Compile Include="Resources\MasterScheduleLoader.cs" />
+    <Compile Include="Resources\ProgressTracker.cs" />
     <Compile Include="Resources\Security\Security.cs" />
     <Compile Include="Resources\Student.cs" />
     <Compile Include="Resources\UserGroup.cs" />
