--- a/Majorizor/Majorizor.csproj
+++ b/Majorizor/Majorizor.csproj
@@ -69,6 +69,8 @@
     <Content Include="Content\jquery.dataTables.min.css" />
     <Content Include="Default.aspx" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="img\favicon.ico" />
+    <Content Include="img\logo.png" />
     <Content Include="Login.aspx" />
     <Content Include="packages.config" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
