--- a/Majorizor/Majorizor.csproj
+++ b/Majorizor/Majorizor.csproj
@@ -76,6 +76,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Screens\Advisors\SelectAdvisees.aspx" />
+    <Content Include="Screens\Students\CurriculumView.aspx" />
     <Content Include="Screens\Students\MajorMinorSelection.aspx" />
     <Content Include="Screens\Students\SetStudentInformation.aspx" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -116,6 +117,8 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Advisor.cs" />
+    <Compile Include="Resources\StudentSchedule.cs" />
+    <Compile Include="Resources\CourseName.cs" />
     <Compile Include="Resources\Course.cs" />
     <Compile Include="Resources\DataAccess\AccountController.cs" />
     <Compile Include="Resources\DataAccess\AdvisorInformation.cs" />
@@ -163,6 +166,13 @@
     </Compile>
     <Compile Include="Screens\Advisors\SelectAdvisees.aspx.designer.cs">
       <DependentUpon>SelectAdvisees.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\Students\CurriculumView.aspx.cs">
+      <DependentUpon>CurriculumView.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Screens\Students\CurriculumView.aspx.designer.cs">
+      <DependentUpon>CurriculumView.aspx</DependentUpon>
     </Compile>
     <Compile Include="Screens\Students\MajorMinorSelection.aspx.cs">
       <DependentUpon>MajorMinorSelection.aspx</DependentUpon>
