--- a/Majorizor/Majorizor.csproj
+++ b/Majorizor/Majorizor.csproj
@@ -119,12 +119,13 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Advisor.cs" />
+    <Compile Include="Resources\DataAccess\MajorInformation.cs" />
+    <Compile Include="Resources\DataAccess\Student.cs" />
     <Compile Include="Resources\StudentSchedule.cs" />
     <Compile Include="Resources\CourseName.cs" />
     <Compile Include="Resources\Course.cs" />
     <Compile Include="Resources\DataAccess\AccountController.cs" />
     <Compile Include="Resources\DataAccess\AdvisorInformation.cs" />
-    <Compile Include="Resources\DataAccess\MajorInformation.cs" />
     <Compile Include="Resources\DataAccess\MinorInformation.cs" />
     <Compile Include="Resources\DataAccess\ProgressInformation.cs" />
     <Compile Include="Resources\DataAccess\ScheduleImport.cs" />
@@ -148,7 +149,6 @@
     <Compile Include="Resources\Minors\_NULLMINOR.cs" />
     <Compile Include="Resources\ProgressTracker.cs" />
     <Compile Include="Resources\Security\Security.cs" />
-    <Compile Include="Resources\Student.cs" />
     <Compile Include="Resources\UserGroup.cs" />
     <Compile Include="Resources\User.cs" />
     <Compile Include="Screens\Admins\AdminLanding.aspx.cs">
