--- a/Majorizor/Majorizor.csproj
+++ b/Majorizor/Majorizor.csproj
@@ -119,10 +119,10 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Advisor.cs" />
+    <Compile Include="Resources\DataAccess\CourseInformation.cs" />
     <Compile Include="Resources\DataAccess\MajorInformation.cs" />
-    <Compile Include="Resources\DataAccess\Student.cs" />
+    <Compile Include="Resources\Student.cs" />
     <Compile Include="Resources\StudentSchedule.cs" />
-    <Compile Include="Resources\CourseName.cs" />
     <Compile Include="Resources\Course.cs" />
     <Compile Include="Resources\DataAccess\AccountController.cs" />
     <Compile Include="Resources\DataAccess\AdvisorInformation.cs" />
