--- a/Majorizor/Majorizor.csproj
+++ b/Majorizor/Majorizor.csproj
@@ -121,6 +121,8 @@
     <Compile Include="Resources\Advisor.cs" />
     <Compile Include="Resources\DataAccess\CourseInformation.cs" />
     <Compile Include="Resources\DataAccess\MajorInformation.cs" />
+    <Compile Include="Resources\DataAccess\MajorMinorSetter.cs" />
+    <Compile Include="Resources\MajorMinorManager.cs" />
     <Compile Include="Resources\Student.cs" />
     <Compile Include="Resources\StudentSchedule.cs" />
     <Compile Include="Resources\Course.cs" />
